admin table sticky header overlap issue fixed

--- a/src/assets/admin/scss/custom-styles.scss
+++ b/src/assets/admin/scss/custom-styles.scss
@@ -925,13 +925,15 @@ ul.list-group{
       th {
         position: sticky;
         top: 0;
-        background: rgba(65, 40, 95, 0.06);
+        // background: rgba(65, 40, 95, 0.06);
+        background: #efefef;
         text-align: left;
         font-style: normal;
-        font-weight: 400;
+        font-weight: 600;
         font-size: 14px;
         line-height: 24px;
         color: $black;
+        z-index: 99;
       }
       
       th:last-child {
